--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <div class="index-back">
   <form class="bar-circle">
-    <h3>Madrid Free Wifis</h3>
+    <h3>Madrid Free Wifis<i class="medium material-icons">location_city</i></h3>
       <p class="choose">Choose the size of the radius:</p>
     <p class="range-field">
       <input type="range" id="slide" min="500" max="5000" value="1000" />
@@ -9,7 +9,6 @@
 
  <div id="map"></div>
  </div>
-
 <footer class="page-footer">
     <div class="container">
       <strong id="span-footer">Made by <a href="https://github.com/TeoDiaz">Teo Diaz</a> & 
@@ -18,7 +17,23 @@
         </strong>
     </div>
   </footer>
-
+<div class="container2">
+  <div class="row2 right-row card-panel z-depth-4">
+<div class="row2">
+  <p>Wifis disponibles en tu zona.<br><br> Subiendo el radio veras mas wifis de Madrid disponibles</p>
+  <i class="medium material-icons right check">done</i>
+</div>
+    </div>
+    </div>
+    <div class="container2">
+  <div class="row2 left-row card-panel z-depth-4">
+    <div class="row2">
+          <p>Datos oficiales de la Comunidad de Madrid</p>
+          <i class="medium material-icons naviga">navigation</i>
+          <i class="medium material-icons map">map</i>
+          </div>
+    </div>
+    </div>
 <script>
   window.info = {{{ infoStr }}}
 </script>
